--- a/public/edit/race.html
+++ b/public/edit/race.html
@@ -66,15 +66,15 @@
       </div>
       <div class="mb-3">
         <label for="raceDate" class="form-label">Datum trke:</label>
-        <input type="date" class="form-control" id="raceDate" min="2025-01-01" max="2025-12-31" required >
+        <input type="date" class="form-control" id="raceDate" required >
       </div>
       <div class="mb-3">
         <label for="lapLengthKm" class="form-label">Dužina kruga (km):</label>
-        <input type="number" class="form-control" id="lapLengthKm" min="1"  step="0.001" required>
+        <input type="number" class="form-control" id="lapLengthKm"  step="0.001" required>
       </div>
       <div class="mb-3">
         <label for="lapCount" class="form-label">Broj krugova:</label>
-        <input type="number" class="form-control" id="lapCount" min="1" max="99" required>
+        <input type="number" class="form-control" id="lapCount"  required>
       </div>
       <div class="mb-3">
         <label for="trackType" class="form-label">Tip staze:</label>
@@ -122,17 +122,21 @@
             const raceDateStr = document.getElementById('raceDate').value;
             const raceDate = new Date(raceDateStr);
 
-            if (!lapLengthKm || lapLengthKm < 0) {
-              alert("Dužina kruga ne može biti negativna.");
+            if ( lapLengthKm < 1) {
+              alert("Dužina kruga mora biti duža od 1 km.");
               return;
             }
 
-            if (!lapCount || lapCount <= 0) {
+            if ( lapCount <= 0) {
               alert("Broj krugova mora biti veći od 0.");
               return;
             }
+            if ( lapCount > 100) {
+              alert("Broj krugova ne sme biti veći od 99");
+              return;
+            }
 
-            if (!raceDateStr || raceDate.getFullYear() !== 2025) {
+            if ( raceDate.getFullYear() !== 2025) {
               alert("Datum trke mora biti u 2025. godini.");
               return;
             }
