Improved Frontend Logic

--- a/public/edit/driver.html
+++ b/public/edit/driver.html
@@ -184,6 +184,10 @@
             alert("Vozač mora imati najmanje 16 godina kada je debitovao.");
             return;
           }
+          if (worldTitles > (currentYear - debutYear  )) {
+            alert(`Broj osvojenih šampionata ne može biti veći od broja sezona od debitovanja. Vozač može maksimalno da osvoji ${(currentYear - debutYear  )}`);
+            return;
+          }
 
 
           axios.request({
